se corrigió el código

--- a/prueba.html
+++ b/prueba.html
@@ -31,7 +31,7 @@
     <button onclick="predictModel()">Predecir</button>
     <button onclick="showTrends()">Mostrar Tendencias</button>
     <button onclick="showPatterns()">Mostrar Patrones</button>
-    <button id="btnFile">Cargar CSV y Calcular KMeans</button>
+    <button id="btnFile">Calcular KMeans</button>
     <button id="btnLineal">Calcular KMeans Lineal</button>
     
     <canvas id="chartContainer" style="width:100%; height:500px;"></canvas>
